kubeadm/cert-manager.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-08-01T06:59:28Z"
  generation: 1
  labels:
    app: cert-manager
    chart: cert-manager-v0.8.1
    heritage: Tiller
    release: cert-manager
  name: cert-manager
  namespace: cert-manager
  resourceVersion: "215516"
  selfLink: /apis/extensions/v1beta1/namespaces/cert-manager/deployments/cert-manager
  uid: 94d3d003-d893-40b1-a7fd-82712fcbff02
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: cert-manager
      release: cert-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9402"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: cert-manager
        release: cert-manager
    spec:
      containers:
      - args:
        - --v=2
        - --cluster-resource-namespace=$(POD_NAMESPACE)
        - --leader-election-namespace=$(POD_NAMESPACE)
        image: quay.io/jetstack/cert-manager-controller:v0.8.1
        imagePullPolicy: IfNotPresent
        name: cert-manager
        ports:
        - containerPort: 9402
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      podDnsPolicy: "None"
      podDnsConfig:
        nameservers:
          - "1.1.1.1"
          - "8.8.8.8"
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: cert-manager
      serviceAccountName: cert-manager
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2019-08-01T06:59:40Z"
    lastUpdateTime: "2019-08-01T06:59:40Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-08-01T06:59:28Z"
    lastUpdateTime: "2019-08-01T06:59:40Z"
    message: ReplicaSet "cert-manager-54dffbdd8b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
