kubeadm/dashboard_ingress_v2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - dashboard.shitangdama.cn
    secretName: k8s-dashboard
  rules:
    - host: dashboard.shitangdama.cn
      http:
        paths:
        - path: /dashboard
          backend:
            serviceName: kubernetes-dashboard
            servicePort: 443
